[package]
name = "bevy_sim_world"
version = "0.1.0"
edition = "2021"
authors = ["Noah Shomette <noahshomette@gmail.com>"]
description = "A library providing a separated simulation world for the Bevy Game Engine"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/NoahShomette/bevy_sim_world"
exclude = ["assets/*", "design/*", "tools/*"]
resolver = "2"

[badges]
maintenance = { status = "actively-developed" }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.13.2", features = [
    "bevy_scene",
    "bevy_gilrs",
    "bevy_winit",
    "serialize",
    "wayland",
    "x11",
], default-features = false }
serde = { version = "1.0.125", features = ["derive"] }
bevy-trait-query = { version = "0.5.1" }
bincode = { version = "1.3.3" }
chrono = { version = "0.4.23", features = ["std", "serde"] }
